@@ -1,3 +1,7 @@
+* Breaking changes
+
+  * Name merge functions "upsert1_2_0" instead of "upsert_"
+
 1.2.0 / 2013-04-04
 
 * Breaking changes
